Exception handling updates

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -16,6 +16,11 @@
 		<add key="Security_AllowUsersToLogin" value="False" />
 		<add key="Security_RequiredFields" value="UserName,Password,Email,Terms" />
 		<add key="Security_OptionalFields" value="FirstName,LastName" />
+		<add key="RunMode" value="TEST" />
+		<add key="SmtpServer" value="mail.x360ce.com" />
+		<add key="SmtpFrom" value="info@x360ce.com" />
+		<add key="ErrorRecipients" value="info@x360ce.com"/>
+		<add key="ErrorNotifications" value="True"/>
 		<add key="AppEncryptionHmacHashKey" value="Developer1234" />
 	</appSettings>
 	<!-- Allow Authorization -->
