Threading issue fixed. Updates to beta app.

--- a/x360ce.App.WPF/x360ce.App.WPF.csproj
+++ b/x360ce.App.WPF/x360ce.App.WPF.csproj
@@ -37,6 +37,9 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet />
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>App.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -219,6 +222,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Axis_Black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="App.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
