--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -587,8 +587,8 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>if $(ConfigurationName) == Release (
-if $(PlatformName) == x86 $(SolutionDir)x360ce.App\Resources\NetZ\netz.exe -pl x86 -s -so -z $(TargetPath)
-if $(PlatformName) == x64 $(SolutionDir)x360ce.App\Resources\NetZ\netz.exe -pl x64 -s -so -z $(TargetPath)
+if $(PlatformName) == x86 $(SolutionDir)$(ProjectName)\Resources\NetZ\netz.exe -pl x86 -s -so -z $(TargetPath)
+if $(PlatformName) == x64 $(SolutionDir)$(ProjectName)\Resources\NetZ\netz.exe -pl x64 -s -so -z $(TargetPath)
 if $(PlatformName) == AnyCPU $(SolutionDir)\x360ce.App\Resources\NetZ\netz.exe -s -so -z $(TargetPath)
 )
 ::if $(PlatformName) == x86 COPY /Y "$(TargetPath)" "$(SolutionDir)x360ce\x360ce\bin\$(ConfigurationName)"
