--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -121,7 +121,6 @@
     <Compile Include="Common\SearchParameter.cs" />
     <Compile Include="Common\SearchParameterCollection.cs" />
     <Compile Include="Common\SearchResult.cs" />
-    <Compile Include="Common\Serializer.cs" />
     <Compile Include="Common\SettingsData.cs" />
     <Compile Include="Common\WebServiceClient.cs">
       <SubType>Component</SubType>
@@ -200,6 +199,7 @@
     <Compile Include="JocysCom\Runtime\Attributes.cs" />
     <Compile Include="JocysCom\Runtime\EmailResult.cs" />
     <Compile Include="JocysCom\Runtime\LogHelper.cs" />
+    <Compile Include="JocysCom\Runtime\Serializer.cs" />
     <Compile Include="JocysCom\Security\BuildInRoles.cs" />
     <Compile Include="JocysCom\Security\BuiltInUsers.cs" />
     <Compile Include="JocysCom\Security\Check.cs" />
