New Rewriter rule to redirect file downloads to GitHub.

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -122,13 +122,19 @@
 					</conditions>
 					<action type="Redirect" url="http://{R:1}" redirectType="Permanent" />
 				</rule>
+				<rule name="RedirectFiles" stopProcessing="true">
+				  <match url="^Files/(.*)" />
+				  <conditions logicalGrouping="MatchAll">
+				  </conditions>
+				  <action type="Redirect" url="https://github.com/x360ce/x360ce/blob/master/x360ce.Web/Files/{R:1}?raw=true" />
+				</rule>
 				<!--<rule name="To https://github.com/x360ce/x360ce" stopProcessing="true">
-          <match url="^$" />
-          <conditions logicalGrouping="MatchAll">
-            <add input="{HTTP_HOST}" pattern="^www\.x360ce\.com$" />
-          </conditions>
-          <action type="Redirect" url="https://github.com/x360ce/x360ce" redirectType="Permanent" />
-        </rule>-->
+				  <match url="^$" />
+				  <conditions logicalGrouping="MatchAll">
+					<add input="{HTTP_HOST}" pattern="^www\.x360ce\.com$" />
+				  </conditions>
+				  <action type="Redirect" url="https://github.com/x360ce/x360ce" redirectType="Permanent" />
+				</rule>-->
 			</rules>
 		</rewrite>
 		<validation validateIntegratedModeConfiguration="false" />
